# OpenCVDetectRed

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Installing OpenCV on macOS  Makefile  README.md  RedDetection  cmake_install.cmake  reddetection copy.cpp  reddetection.cpp
Webapp/: example.cpp  example12.cpp  index.html  paste.cpp  server.py
